--- a/Code/experiments/configs/experiments.yaml
+++ b/Code/experiments/configs/experiments.yaml
@@ -1,27 +1,151 @@
+# Experiment configs for testing interventions
 interventions:
+  num_samples: 1
   param_1:
     name: sort_by_prob
-    type: boolean
+    type: grid
+    options: [True, False]
 
   param_2:
     name: concurrent_requests
-    type: quantized 
+    type: quantized_grid 
     min: 1
-    max: 9
+    max: 8
     interval: 1
+    sample: False
 
+# Experiment configs of the length of stay sensitivity analysis
 los_sensitivity_analysis:
+  num_samples: 1
+  output_metric: treatment_delay
   param_1:
     name: los_sa_factor
-    type: quantized
+    type: quantized_grid
     min: 0.5
-    max: 1.6
+    max: 1.5
     interval: 0.1
+    sample: False
 
+# Experiment configs of the lambda sensitivity analysis
 lambda_sensitivity_analysis:
+  num_samples: 1
+  output_metric: treatment_delay
   param_1:
     name: arrival_rate_sa_factor
-    type: quantized
+    type: quantized_grid
     min: 0.5
-    max: 1.6
+    max: 1.5
     interval: 0.1
+    sample: False
+
+# Experiment configs for the overall ed scaling paramter tuning job
+ed-arr:
+  job_name: ed_arrival_tuning
+  num_samples: 1
+  output_metric: all_admissions
+  param_1:
+    name: ed_scale_param
+    type: quantized_grid
+    min: 1
+    max: 2
+    interval: 2e-2
+    sample: False
+
+# Experiment configs for the acceptance proability tuning job
+acceptance-probs-grid-search:
+  job_name: acceptance-probs
+  num_samples: 1
+  output_metric: admssions_by_facility
+  param_1:
+    id_col: Facility_name
+    param_col: Acceptance_Prob
+    type: quantized_grid
+    min: 0.5
+    max: 1 
+    interval: 0.5
+    init_params: False
+    sample: False
+
+# Experiment configs for the acceptance proability tuning job (using HyperOpt)
+acceptance-probs-HyperOpt:
+  num_samples: 500
+  output_metric: admssions_by_facility
+  param_1:
+    id_col: Facility_name
+    param_col: Acceptance_Prob
+    type: uniform
+    min: 0.3
+    max: 1 
+    init_params: True
+  searcher: 
+    class: ray.tune.search.hyperopt.hyperopt_search.HyperOptSearch
+    metric: MSE
+    mode: min
+    points_to_evaluate: params_0
+    
+acceptance-probs-BOHB:
+  num_samples: 500
+  output_metric: admssions_by_facility
+  param_1:
+    id_col: Facility_name
+    param_col: Acceptance_Prob
+    type: uniform
+    min: 0.3
+    max: 1 
+    init_params: True
+  searcher: 
+    class: ray.tune.search.bohb.bohb_search.TuneBOHB
+    metric: MSE
+    mode: min
+    points_to_evaluate: params_0
+  scheduler:
+    class: ray.tune.schedulers.hb_bohb.HyperBandForBOHB
+    time_attr: training_iteration
+    metric: MSE
+    mode: min
+
+acceptance-probs-Coord:
+  num_samples: 500
+  output_metric: coordination_time
+  param_1:
+    id_col: Facility_name
+    param_col: Acceptance_Prob
+    type: uniform
+    min: 0.3
+    max: 1 
+    init_params: True
+  searcher: 
+    class: ray.tune.search.hyperopt.hyperopt_search.HyperOptSearch
+    metric: MSE
+    mode: min
+    points_to_evaluate: params_0
+    
+# Experiment configs for tuning the scaling paramter of individual EDs
+ed-arr-sep-grid-search:
+  num_samples: 1
+  output_metric: admissions_by_facility
+  param_1:
+    id_col: hccis_id
+    param_col: ed_scale_param
+    type: quantized_grid
+    min: 0.5
+    max: 1.5 
+    interval: 0.5
+    init_params: False
+    sample: False
+    
+ed-arr-sep-HyperOpt:
+  num_samples: 500
+  output_metric: admssions_by_facility
+  param_1:
+    id_col: hccis_id
+    param_col: ed_scale_param
+    type: uniform
+    min: 0.5
+    max: 1.5 
+    init_params: True
+  searcher: 
+    class: ray.tune.search.hyperopt.hyperopt_search.HyperOptSearch
+    metric: MSE
+    mode: min
+    points_to_evaluate: params_0
