--- a/Code/experiments/configs/experiments.yaml
+++ b/Code/experiments/configs/experiments.yaml
@@ -4,6 +4,7 @@ interventions:
   param_1:
     name: sort_by_prob
     type: grid
+    init_params: False
     options: [True, False]
 
   param_2:
@@ -11,6 +12,7 @@ interventions:
     type: quantized_grid 
     min: 1
     max: 8
+    init_params: False
     interval: 1
     sample: False
 
@@ -24,6 +26,7 @@ los_sensitivity_analysis:
     min: 0.5
     max: 1.5
     interval: 0.1
+    init_params: False
     sample: False
 
 # Experiment configs of the lambda sensitivity analysis
@@ -36,6 +39,7 @@ lambda_sensitivity_analysis:
     min: 0.5
     max: 1.5
     interval: 0.1
+    init_params: False
     sample: False
 
 # Experiment configs for the overall ed scaling paramter tuning job
@@ -49,13 +53,14 @@ ed-arr:
     min: 1
     max: 2
     interval: 2e-2
+    init_params: False
     sample: False
 
 # Experiment configs for the acceptance proability tuning job
 acceptance-probs-grid-search:
   job_name: acceptance-probs
   num_samples: 1
-  output_metric: admssions_by_facility
+  output_metric: admissions_by_facility
   param_1:
     id_col: Facility_name
     param_col: Acceptance_Prob
@@ -69,7 +74,7 @@ acceptance-probs-grid-search:
 # Experiment configs for the acceptance proability tuning job (using HyperOpt)
 acceptance-probs-HyperOpt:
   num_samples: 500
-  output_metric: admssions_by_facility
+  output_metric: admissions_by_facility
   param_1:
     id_col: Facility_name
     param_col: Acceptance_Prob
@@ -85,7 +90,7 @@ acceptance-probs-HyperOpt:
     
 acceptance-probs-BOHB:
   num_samples: 500
-  output_metric: admssions_by_facility
+  output_metric: admissions_by_facility
   param_1:
     id_col: Facility_name
     param_col: Acceptance_Prob
@@ -136,7 +141,7 @@ ed-arr-sep-grid-search:
     
 ed-arr-sep-HyperOpt:
   num_samples: 500
-  output_metric: admssions_by_facility
+  output_metric: admissions_by_facility
   param_1:
     id_col: hccis_id
     param_col: ed_scale_param
