--- a/.gitignore
+++ b/.gitignore
@@ -1,72 +1,19 @@
-# Custom
-/Data
-/renv
-/Results
 .Rhistory
-/Code/deprecated
-/Code/experiments/logs/
-Api_Keys.R
-*.Rproj.user
-*.Rproj
-.bashrc
-.bash_profile
-.vscode/
-renv.lock
-*.pyc
-/dask-scratch-space/
-
-slurm_exe.sh
-slurm_exe_short.sh
-test_exe.sh
-Code/submit_tune_jobs.sh
-
-# History files
-*.Rhistory
-*.Rapp.history
-
-# Session Data files
-*.RData
-*.RDataTmp
-*.rda
-
-# User-specific files
-*.Ruserdata
-
-# Example code in package build process
-*-Ex.R
-
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
-
-# RStudio files
 .Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-# R Environment Variables
-.Renviron
-
-# pkgdown site
-docs/
-
-# translation temp files
-po/*~
-
-# RStudio Connect folder
-rsconnect/
+.vscode/
+Api_Keys.R
+Code/deprecated/
+Code/slurm_exe/
+Data/Mayo Clinic Data/
+Data/Validation Metric Dataframes.rds
+Results/
+acceptance-probs-Coord/
+acceptance-probs-all-metrics/
+acceptance-probs-norm/
+acceptance-probs/
+dask-scratch-space/
+debug/
+last.dump.rda
+logs/
+src/__pycache__/
+tests/
